#6 :sparkles: feat : add and apply fonts in this app

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -74,12 +74,42 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: RIDIBatang
+      fonts:
+        - asset: assets/fonts/RIDIBatang.otf
+    - family: Kyobo
+      fonts:
+        - asset : assets/fonts/KyoboHandwriting2021sjy.otf
+    - family: Korail
+      fonts:
+        - asset : assets/fonts/KORAIL.ttf
+    - family: KorailRoundGothic
+      fonts:
+        - asset : assets/fonts/Korail_Round_Gothic_Bold.ttf
+          weight : 700
+        - asset : assets/fonts/Korail_Round_Gothic_Medium.ttf
+          weight : 500
+        - asset : assets/fonts/Korail_Round_Gothic_Light.ttf
+          weight : 300
+    - family: KorailCondensed
+      fonts:
+        - asset : assets/fonts/korail_Condensed.ttf
+    - family: Kimm
+      fonts:
+        - asset : assets/fonts/한국기계연구원_bold.ttf
+          weight : 700
+        - asset : assets/fonts/한국기계연구원_Light.ttf
+          weight : 300
+    - family: Ttangs
+      fonts:
+        - asset : assets/fonts/땅스부대찌개OTF Bold.otf
+          weight : 700
+        - asset : assets/fonts/땅스부대찌개OTF Medium.otf
+          weight : 500
+        - asset : assets/fonts/땅스부대찌개OTF Light.otf
+          weight : 300
+    
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
