--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -42,3 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# private information
+/lib/providers/api_list.dart
+/lib/widgets/tab_bar_examples.dart
