--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   contained_tab_bar_view: ^0.8.0
   table_calendar: ^3.0.9
+  intl: ^0.18.0
+  share: ^2.0.4
+  flutter_calendar_carousel: ^2.4.2
 
 dev_dependencies:
   flutter_test:
