--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.18.0
   share: ^2.0.4
   flutter_calendar_carousel: ^2.4.2
+  kakao_flutter_sdk: ^1.4.0
+  image_picker: ^0.8.6+2
 
 dev_dependencies:
   flutter_test:
