--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.6.0
 async-timeout==4.0.2
 Django==3.2.12
+django-cors-headers==3.13.0
 django-redis==5.2.0
+djangorestframework==3.14.0
 gunicorn==20.1.0
 mysqlclient==2.1.1
 pytz==2022.7.1
