--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_calendar_carousel: ^2.4.2
   kakao_flutter_sdk: ^1.4.0
   image_picker: ^0.8.6+2
+  flutter_dotenv: ^5.0.2
+  dio: ^4.0.6
+
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +79,7 @@ flutter:
     - assets/images/joe-woods.jpg
     - assets/images/luke-chesser.jpg
     - assets/images/resul-mentes.jpg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
