--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # cupertino_icons: ^1.0.2
   contained_tab_bar_view: ^0.8.0
   table_calendar: ^3.0.9
   intl: ^0.18.0
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.8.6+2
   flutter_dotenv: ^5.0.2
   dio: ^4.0.6
+  shared_preferences: ^2.0.18
 
 
 dev_dependencies:
