--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   image_picker: ^0.8.6+2
   flutter_dotenv: ^5.0.2
   dio: ^4.0.6
-  shared_preferences: ^2.0.18
+  flutter_secure_storage : ^5.0.2
 
 
 dev_dependencies:
