--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   dio: ^4.0.6
   flutter_secure_storage : ^5.0.2
+  provider: ^6.0.5
 
 
 dev_dependencies:
