--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,16 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  syncfusion_flutter_datepicker: ^21.1.41
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.2
   contained_tab_bar_view: ^0.8.0
-  table_calendar: ^3.0.9
-  intl: ^0.18.0
+  # intl: ^0.17.0
   share: ^2.0.4
-  flutter_calendar_carousel: ^2.4.2
   kakao_flutter_sdk_user: ^1.4.0
   kakao_flutter_sdk_share: ^1.4.0
   image_picker: ^0.8.6+2
@@ -60,12 +60,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  intl_generator: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  generate: true # localization
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
