--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 Django==3.2.12
 django-cors-headers==3.13.0
+django-crontab==0.7.1
 django-redis==5.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
