--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_secure_storage : ^5.0.2
   provider: ^6.0.5
   shared_preferences: ^2.1.0
+  firebase_core: ^2.13.0
+  firebase_messaging: ^14.6.1
+  flutter_local_notifications: ^14.1.0
 
 
 dev_dependencies:
