--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
                 <!-- 카카오 로그인 Redirect URI -->
                 <data android:scheme="kakaoea92a1dc805d50e7c75555e658fa925e" android:host="oauth"/>
+                <data android:scheme="https" android:host="bingot.page.link"/>
             </intent-filter>
         </activity>
 
