--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   device_info_plus: ^8.1.0
   package_info_plus: ^3.0.3
   http_parser: ^4.0.2
+  firebase_dynamic_links: ^5.3.3
 
 
 dev_dependencies:
