--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.2
   # syncfusion_flutter_datepicker: ^21.1.41
-  custom_date_range_picker: ^1.0.6
+  
   contained_tab_bar_view: ^0.8.0
-  # intl: ^0.18.0
+  calendar_date_picker2: ^0.5.2
+  # intl: ^0.17.0
   share: ^2.0.4
   kakao_flutter_sdk_user: ^1.4.0
   kakao_flutter_sdk_share: ^1.4.0
