--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.2
-  # syncfusion_flutter_datepicker: ^21.1.41
   
   contained_tab_bar_view: ^0.8.0
   calendar_date_picker2: ^0.5.2
@@ -60,6 +59,8 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_messaging: ^14.6.1
   flutter_local_notifications: ^14.1.0
+  cached_network_image: ^3.2.3
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
