#52 #47 #29 : :see_no_evil: chore: fix initializing input in group form and try to apply dynamic link

--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data
                     android:host="bingot.page.link"
+                    android:path="/groups"
                     android:scheme="https"/>
             </intent-filter>
             
