--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -68,6 +68,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+                minifyEnabled true
+                shrinkResources true
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
