--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   
   contained_tab_bar_view: ^0.8.0
   calendar_date_picker2: ^0.5.2
-  # intl: ^0.17.0
   share: ^2.0.4
   kakao_flutter_sdk_user: ^1.4.0
   kakao_flutter_sdk_share: ^1.4.0
@@ -61,6 +60,9 @@ dependencies:
   flutter_local_notifications: ^14.1.0
   cached_network_image: ^3.2.3
   image_gallery_saver: ^2.0.3
+  chatview: ^1.3.0
+  flutter_snake_navigationbar: ^0.6.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
