--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  # cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2
   
   contained_tab_bar_view: ^0.8.0
   calendar_date_picker2: ^0.5.2
@@ -60,7 +60,6 @@ dependencies:
   flutter_local_notifications: ^14.1.0
   cached_network_image: ^3.2.3
   image_gallery_saver: ^2.0.3
-  chatview: ^1.3.0
   flutter_snake_navigationbar: ^0.6.1
   intl: ^0.18.0
 
