--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   
   contained_tab_bar_view: ^0.8.0
   calendar_date_picker2: ^0.5.2
-  share: ^2.0.4
   kakao_flutter_sdk_user: ^1.4.0
   kakao_flutter_sdk_share: ^1.4.0
   image_picker: ^0.8.6+2
@@ -62,6 +61,8 @@ dependencies:
   image_gallery_saver: ^2.0.3
   flutter_snake_navigationbar: ^0.6.1
   intl: ^0.18.0
+  share_plus: ^7.1.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
