--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
 
   contained_tab_bar_view: ^0.8.0
   calendar_date_picker2: ^0.5.2
-  share: ^2.0.4
   kakao_flutter_sdk_user: ^1.5.0
   kakao_flutter_sdk_share: ^1.5.0
   image_picker: ^0.8.6+2
@@ -47,7 +46,7 @@ dependencies:
   dio: ^5.0.3
   flutter_secure_storage: ^9.0.0
   provider: ^6.0.5
-  shared_preferences: ^2.1.0
+  # shared_preferences: ^2.1.0
   permission_handler: ^10.3.0
   flutter_email_sender: ^6.0.1
   device_info_plus: ^9.0.3
@@ -63,6 +62,9 @@ dependencies:
   intl: ^0.18.0
   share_plus: ^7.1.0
   path_provider: ^2.1.1
+  flutter_html: ^3.0.0-beta.1
+  webview_flutter: ^4.0.2
+  flutter_oss_licenses: ^2.0.1
 
 dev_dependencies:
   flutter_test:
