--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -89,8 +89,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logos/bin_got_logo_0.5x.png
-    - assets/logos/bin_got_logo_1x.png
+    - assets/logos/logo.png
     - assets/images/kakao_login_button.png
     - assets/images/circle.jpg
     - assets/images/flowers.png
