--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   kakao_flutter_sdk_user: ^1.5.0
   kakao_flutter_sdk_share: ^1.5.0
   flutter_local_notifications: ^14.1.0
+  wrapped_korean_text: ^0.0.1
 
 dev_dependencies:
   flutter_test:
