--- a/frontend/macos/Runner/Configs/AppInfo.xcconfig
+++ b/frontend/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = bin_got
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.binGot
+PRODUCT_BUNDLE_IDENTIFIER = xyz.bingot.android
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 xyz.bingot. All rights reserved.
