--- a/frontend/macos/Runner/GoogleService-Info.plist
+++ b/frontend/macos/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.binGot</string>
+	<string>xyz.bingot.android</string>
 	<key>PROJECT_ID</key>
 	<string>bingot-2c712</string>
 	<key>STORAGE_BUCKET</key>
