--- a/frontend/windows/runner/Runner.rc
+++ b/frontend/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "bin_got" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "bin_got" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 xyz.bingot. All rights reserved." "\0"
             VALUE "OriginalFilename", "bin_got.exe" "\0"
             VALUE "ProductName", "bin_got" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
