--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.1.0+3
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   share_plus: ^7.1.0
   http_parser: ^4.0.2
+  url_launcher: ^6.1.10
   flutter_html: ^3.0.0-beta.1
   image_picker: ^0.8.6+2
   firebase_core: ^2.13.0
